# simd-text

./: Cargo.toml  README.md  demo.cast  demo.sh
.github/workflows/: ci.yml
benches/: throughput.rs
docs/: ARCHITECTURE.md  DESIGN.md
examples/: base64_demo.rs  basic.rs  pipeline.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64_roundtrip.rs  fuzz_classify.rs  fuzz_line_ranges.rs  fuzz_parse_integer.rs  fuzz_utf8_validate.rs
src/: aligned.rs  detect_mod.rs  fields.rs  lib.rs  pipeline_mod.rs
src/base64/: mod.rs  scalar.rs
src/classify/: avx2.rs  mod.rs  scalar.rs
src/lines/: avx2.rs  mod.rs  scalar.rs
src/numbers/: float.rs  integer.rs  mod.rs
src/utf8/: avx2.rs  mod.rs  scalar.rs
